--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
    "dependencies": {
       "@expo-google-fonts/mulish": "^0.3.0",
       "@expo-google-fonts/sora": "^0.3.0",
+      "@react-native-async-storage/async-storage": "^2.1.2",
       "@react-navigation/native": "^7.0.0",
       "@rn-primitives/avatar": "~1.1.0",
       "@rn-primitives/dialog": "^1.1.0",
@@ -39,12 +40,14 @@
       "expo-splash-screen": "~0.29.20",
       "expo-status-bar": "~2.0.1",
       "expo-system-ui": "~4.0.7",
+      "lottie-react-native": "7.1.0",
       "lucide-react-native": "^0.378.0",
       "nativewind": "^4.1.23",
       "react": "18.3.1",
       "react-dom": "18.3.1",
       "react-native": "0.76.9",
       "react-native-nfc-manager": "^3.16.1",
+      "react-native-onboarding-swiper": "^1.3.0",
       "react-native-reanimated": "~3.16.1",
       "react-native-safe-area-context": "4.12.0",
       "react-native-screens": "~4.4.0",
@@ -58,6 +61,7 @@
    "devDependencies": {
       "@babel/core": "^7.26.0",
       "@types/react": "~18.3.12",
+      "@types/react-native-onboarding-swiper": "^1.1.9",
       "prettier": "^3.5.3",
       "typescript": "^5.3.3"
    },
