--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
    "dependencies": {
       "@expo-google-fonts/mulish": "^0.3.0",
       "@expo-google-fonts/sora": "^0.3.0",
-      "@react-native-async-storage/async-storage": "^2.1.2",
+      "@react-native-async-storage/async-storage": "1.23.1",
       "@react-navigation/native": "^7.0.0",
       "@rn-primitives/avatar": "~1.1.0",
       "@rn-primitives/dialog": "^1.1.0",
