--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
       "convex": "^1.23.0",
       "expo": "^52.0.25",
       "expo-blur": "^14.0.3",
+      "expo-dev-client": "~5.0.20",
       "expo-image-picker": "^16.0.6",
       "expo-linear-gradient": "^14.0.2",
       "expo-linking": "~7.0.4",
