--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
       "class-variance-authority": "^0.7.0",
       "clsx": "^2.1.0",
       "convex": "^1.23.0",
+      "convex-helpers": "^0.1.79",
       "expo": "^52.0.25",
       "expo-blur": "^14.0.3",
       "expo-image-picker": "^16.0.6",
