--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "clean": "rm -rf .expo node_modules",
       "prebuild": "bunx expo prebuild --clean --platform android",
       "eas:build": "eas build --platform android --profile development",
+      "export": "bunx expo export --platform android",
       "postinstall": "npx tailwindcss -i ./global.css -o ./node_modules/.cache/nativewind/global.css",
       "format": "prettier --write ."
    },
@@ -34,12 +35,15 @@
       "convex": "^1.23.0",
       "convex-helpers": "^0.1.79",
       "expo": "^52.0.25",
-      "expo-blur": "^14.0.3",
+      "expo-blur": "~14.0.3",
+      "expo-constants": "~17.0.8",
       "expo-dev-client": "~5.0.20",
-      "expo-image-picker": "^16.0.6",
-      "expo-linear-gradient": "^14.0.2",
+      "expo-device": "~7.0.3",
+      "expo-image-picker": "~16.0.6",
+      "expo-linear-gradient": "14.1.4~14.0.2",
       "expo-linking": "~7.0.4",
       "expo-navigation-bar": "~4.0.7",
+      "expo-notifications": "~0.29.14",
       "expo-router": "~4.0.16",
       "expo-splash-screen": "~0.29.20",
       "expo-status-bar": "~2.0.1",
@@ -64,6 +68,7 @@
    },
    "devDependencies": {
       "@babel/core": "^7.26.0",
+      "@react-native-community/cli": "^18.0.0",
       "@types/react": "~18.3.12",
       "@types/react-native-onboarding-swiper": "^1.1.9",
       "prettier": "^3.5.3",
